fix(color): tweak dark mode colors

--- a/src/vars/color.css
+++ b/src/vars/color.css
@@ -1,24 +1,48 @@
 :root {
+  --e-spread-modifier: 1;
   --e-hue-theme: 210;
   --e-hue-negative: 345;
   --e-hue-positive: 150;
-  --e-saturation-0: 5%;
-  --e-hs-neutral: var(--e-hue-theme), var(--e-saturation-0);
-  --e-hsl-figure: var(--e-hs-neutral), 10%;
-  --e-lightness-spread: 7%;
-  --e-lightness-theme: 22%;
+  --e-hs-neutral: var(--e-hue-theme), 5%;
+  --e-balance-lightness: 45%;
+  --e-balance-lightness-spread: calc(10% * var(--e-spread-modifier));
+  --e-figure-lightness: 10%;
+  --e-figure-lightness-spread: calc(10% * var(--e-spread-modifier));
+  --e-ground-lightness: 95%;
+  --e-ground-lightness-spread: calc(5% * var(--e-spread-modifier));
+  --e-theme-lightness: 22%;
+  --e-theme-lightness-spread: calc(7% * var(--e-spread-modifier));
+  --e-hsl-figure: var(--e-hs-neutral), var(--e-figure-lightness);
 
-  --e-color-balance: hsl(var(--e-hs-neutral), 45%);
-  --e-color-balance-less: hsl(var(--e-hs-neutral), 55%);
-  --e-color-balance-more: hsl(var(--e-hs-neutral), 35%);
+  --e-color-balance: hsl(var(--e-hs-neutral), var(--e-balance-lightness));
+  --e-color-balance-less: hsl(
+    var(--e-hs-neutral),
+    calc(var(--e-balance-lightness) + var(--e-balance-lightness-spread))
+  );
+  --e-color-balance-more: hsl(
+    var(--e-hs-neutral),
+    calc(var(--e-balance-lightness) - var(--e-balance-lightness-spread))
+  );
 
-  --e-color-figure: hsl(var(--e-hsl-figure));
-  --e-color-figure-less: hsl(var(--e-hs-neutral), 20%);
-  --e-color-figure-more: hsl(var(--e-hs-neutral), 0%);
+  --e-color-figure: hsl(var(--e-hs-neutral), var(--e-figure-lightness));
+  --e-color-figure-less: hsl(
+    var(--e-hs-neutral),
+    calc(var(--e-figure-lightness) + var(--e-figure-lightness-spread))
+  );
+  --e-color-figure-more: hsl(
+    var(--e-hs-neutral),
+    calc(var(--e-figure-lightness) - var(--e-figure-lightness-spread))
+  );
 
-  --e-color-ground: hsl(var(--e-hs-neutral), 95%);
-  --e-color-ground-less: hsl(var(--e-hs-neutral), 90%);
-  --e-color-ground-more: hsl(var(--e-hs-neutral), 100%);
+  --e-color-ground: hsl(var(--e-hs-neutral), var(--e-ground-lightness));
+  --e-color-ground-less: hsl(
+    var(--e-hs-neutral),
+    calc(var(--e-ground-lightness) - var(--e-ground-lightness-spread))
+  );
+  --e-color-ground-more: hsl(
+    var(--e-hs-neutral),
+    calc(var(--e-ground-lightness) + var(--e-ground-lightness-spread))
+  );
 
   --e-color-highlight-0: hsl(184, 100%, 48%);
   --e-color-highlight-1: hsl(270, 100%, 67%);
@@ -38,42 +62,34 @@
   --e-color-positive: hsl(var(--e-hue-positive), 75%, 48%);
   --e-color-positive-less: hsl(var(--e-hue-positive), 70%, 57%);
 
-  --e-color-theme: hsl(var(--e-hue-theme), 100%, var(--e-lightness-theme));
+  --e-color-theme: hsl(var(--e-hue-theme), 100%, var(--e-theme-lightness));
   --e-color-theme-less: hsl(
     var(--e-hue-theme),
     100%,
-    calc(var(--e-lightness-theme) + var(--e-lightness-spread))
+    calc(var(--e-theme-lightness) + var(--e-theme-lightness-spread))
   );
   --e-color-theme-more: hsl(
     var(--e-hue-theme),
     100%,
-    calc(var(--e-lightness-theme) - var(--e-lightness-spread))
+    calc(var(--e-theme-lightness) - var(--e-theme-lightness-spread))
   );
   --e-color-theme-app: hsl(
     var(--e-hue-theme),
     100%,
-    calc(var(--e-lightness-theme) - 2 * var(--e-lightness-spread))
+    calc(var(--e-theme-lightness) - 2 * var(--e-theme-lightness-spread))
   );
 }
 
 @media (prefers-color-scheme: dark) {
   :root:not([e-util*='no-dark-theme']) {
+    --e-spread-modifier: -1;
     --e-hue-theme: 185;
     --e-hue-negative: 310;
-    --e-hsl-figure: var(--e-hs-neutral), 86%;
-    --e-lightness-spread: -7%;
-    --e-lightness-theme: 70%;
+    --e-balance-lightness: 60%;
+    --e-figure-lightness: 80%;
+    --e-ground-lightness: 9%;
+    --e-theme-lightness: 70%;
 
-    --e-color-balance: hsl(var(--e-hs-neutral), 60%);
-    --e-color-balance-less: hsl(var(--e-hs-neutral), 50%);
-    --e-color-balance-more: hsl(var(--e-hs-neutral), 70%);
-
-    --e-color-figure-less: hsl(var(--e-hs-neutral), 76%);
-    --e-color-figure-more: hsl(var(--e-hs-neutral), 96%);
-
-    --e-color-ground: hsl(var(--e-hs-neutral), 9%);
-    --e-color-ground-less: hsl(var(--e-hs-neutral), 14%);
-    --e-color-ground-more: hsl(var(--e-hs-neutral), 4%);
     --e-color-highlight-default: var(--e-color-highlight-1);
 
     --e-color-mask: hsla(var(--e-hs-neutral), 20%, 0.75);
